[package]
name = "rcxp"
version = "0.1.0"
authors = ["Egor Poleshko <somedevfox@gmail.com>", "Matthew Lyons <matthew@nowaffles.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.16.0"
rutie = "0.8.3"
flate2-rs = "1.0"
